--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gen-quote",
+  "name": "famous-quotes",
   "version": "1.0.0",
   "description": "An Express wrapper for the \"Random Famous Quotes\" API found on Mashape.",
   "main": "index.js",
@@ -16,7 +16,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/ScottyFillups/gen-quote.git"
+    "url": "https://github.com/ScottyFillups/famous-quotes.git"
   },
   "author": "Philip Scott",
   "license": "MIT",
